crates/server/tests/snapshots/replay__admin_job_detail.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "attempts": 1,
    "cancellable": false,
    "created_at": "[created_at]",
    "finished_at": "2023-11-14T22:14:01Z",
    "id": "[id]",
    "kind": "library_scan",
    "last_error": null,
    "parent_id": null,
    "priority": "normal",
    "progress": 1.0,
    "retryable": false,
    "started_at": "2023-11-14T22:14:00Z",
    "status": "succeeded",
    "updated_at": "[updated_at]"
  },
  "status": 200
}
