crates/server/tests/snapshots/replay__admin_job_missing.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "not_found",
      "message": "job not found"
    }
  },
  "status": 404
}
