crates/server/tests/snapshots/replay__admin_job_retry_refused.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "not_retryable",
      "message": "job cannot be retried"
    }
  },
  "status": 409
}
