crates/server/tests/snapshots/replay__admin_jobs_filtered.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "active_total": 1,
    "all_total": 1,
    "items": [
      {
        "attempts": 0,
        "cancellable": true,
        "created_at": "2023-11-14T22:14:02Z",
        "finished_at": null,
        "id": "job-artwork",
        "kind": "artwork",
        "last_error": null,
        "parent_id": "job-scan",
        "priority": "normal",
        "progress": 0.0,
        "retryable": false,
        "started_at": null,
        "status": "queued",
        "updated_at": "2023-11-14T22:14:02Z"
      }
    ],
    "limit": 50,
    "offset": 0,
    "total": 1
  },
  "status": 200
}
