crates/server/tests/snapshots/replay__admin_versions_filtered.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "items": [
      {
        "added_at": "2023-11-14T22:13:26Z",
        "available": true,
        "container": "mkv",
        "duration_ms": 1000,
        "id": "ev1",
        "library_id": "lib1",
        "path": "/media/ev1.mkv",
        "quality": "hd",
        "size_bytes": 1,
        "title": {
          "id": "e1",
          "type": "episode"
        },
        "updated_at": "2023-11-14T22:13:26Z"
      }
    ],
    "limit": 50,
    "offset": 0,
    "total": 1
  },
  "status": 200
}
