crates/server/tests/snapshots/replay__auth_create_link.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "code": "[code]",
    "expires_at": "[expires_at]"
  },
  "status": 200
}
