crates/server/tests/snapshots/replay__auth_link.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "expires_at": "[expires_at]",
    "token": "[token]"
  },
  "status": 200
}
